--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           name: build assets
           path: '@zimi.zip'
+      - run: ls -lah
       - run: unzip @zimi.zip -d @zimi
 
       - name: Create release pull request
