ci: update zip syntax

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,6 +37,7 @@ jobs:
           path: '@zimi.zip'
       - run: ls -lah
       - run: unzip @zimi.zip -d @zimi
+      - run: rm @zimi.zip
 
       - name: Create release pull request
         id: changesets
