--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,35 +10,26 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
+  test:
+    uses: './.github/workflows/test.yml'
   release:
     timeout-minutes: 15
+    needs: test
     runs-on: ubuntu-latest
     steps:
-      - name: checkout repo
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-
-      - name: Setup node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          registry-url: 'https://registry.npmjs.org'
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-      - name: Install deps
-        uses: pnpm/action-setup@v2
+      # install deps
+      - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
         with:
           version: 7.29.0
-          run_install: |
-            - recursive: true
-
-      - name: Build
-        run: pnpm run build
-
-      - name: Chmod
-        run: chmod ug+x .husky/*
+      - uses: actions/setup-node@v3
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        with:
+          node-version: 16
+          cache: 'pnpm'
+      - run: pnpm install --frozen-lockfile --prefer-offline
+      - run: pnpm build
 
       - name: Create release pull request
         id: changesets
