--- a/@zimi/interact-dom/package.json
+++ b/@zimi/interact-dom/package.json
@@ -6,8 +6,8 @@
   "description": "interact dom",
   "private": false,
   "sideEffects": false,
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40zimi/interact-dom",
   "files": [
@@ -15,25 +15,17 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build",
-    "build:watch": "vite build --watch"
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   },
   "dependencies": {
-    "@babel/runtime": "^7.20.7",
-    "@babel/runtime-corejs3": "^7.18.9",
     "@zimi/event-emitter": "workspace:*",
-    "core-js": "3",
     "gl-matrix": "^3.4.3"
   },
   "peerDependencies": {
     "@zimi/interact": "workspace:*"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@zimi/interact": "workspace:*",
-    "vite": "^4.1.1",
-    "vite-plugin-dts": "2.0.0-beta.1"
+    "@zimi/interact": "workspace:*"
   }
 }
