--- a/@zimi/type-utils/tsconfig.json
+++ b/@zimi/type-utils/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "baseUrl": ".",
-    "declaration": true,
-    "declarationDir": "./dist"
+    "outDir": "./dist"
   },
   "include": ["./src"]
 }
