--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky install && bash -c 'chmod ug+x .husky/*'",
-    "analyze": "source-map-explorer @zimi/*/dist/*.es.js",
-    "analyze-simple": "ts-node --project tsconfig.node.json utils/analyze.ts",
+    "analyze": "tsx utils/analyze.ts",
     "build": "pnpm --filter ./@zimi/* run build",
     "build:watch": "pnpm --filter ./@zimi/* run build:watch",
     "commit": "git-cz",
@@ -63,32 +62,32 @@
     }
   },
   "devDependencies": {
-    "@changesets/cli": "^2.26.0",
-    "@types/glob": "^8.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.32.0",
-    "@typescript-eslint/parser": "^5.32.0",
-    "eslint": "^8.21.0",
+    "@changesets/cli": "^2.27.1",
+    "@types/glob": "^8.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "ts-node": "^10.9.1"
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1"
   },
   "TODO": [
     "test"
   ],
   "dependencies": {
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/cli": "^18.4.3",
+    "@commitlint/config-conventional": "^18.4.3",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "glob": "^8.1.0",
+    "glob": "^10.3.10",
+    "tsx": "^4.7.0",
     "utils": "^0.3.1"
   }
 }
