--- a/@zimi/story-helper/package.json
+++ b/@zimi/story-helper/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@zimi/story-helper",
   "license": "MIT",
-  "version": "0.16.0",
+  "version": "0.17.0",
   "author": "xiaomingTang",
   "description": "story helper",
   "private": false,
   "sideEffects": false,
-  "main": "dist/index.umd.js",
-  "module": "dist/index.es.js",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/xiaomingTang/xiaoming/tree/master/%40zimi/story-helper",
   "files": [
@@ -15,19 +15,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "vite build",
-    "build:watch": "vite build --watch"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.20.7",
-    "@babel/runtime-corejs3": "^7.18.9",
-    "core-js": "3"
-  },
-  "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@rollup/plugin-babel": "^6.0.3",
-    "vite": "^4.1.1",
-    "vite-plugin-dts": "2.0.0-beta.1"
+    "build": "tsc",
+    "build:watch": "tsc --watch"
   }
 }
