--- a/@zimi/hooks/package.json
+++ b/@zimi/hooks/package.json
@@ -19,13 +19,13 @@
     "build:watch": "tsc --watch"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.186",
-    "@types/react": "^18.0.28",
+    "@types/lodash": "^4.17.0",
+    "@types/react": "^18.2.67",
     "react": ">=16.8"
   },
   "dependencies": {
     "lodash": "^4.17.21",
-    "react": ">=16.8"
+    "react": "^18.2.0"
   },
   "peerDependencies": {
     "react": ">=16.8"
