--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "prepare": "husky install && bash -c 'chmod ug+x .husky/*'",
+    "prepare": "husky",
     "analyze": "tsx utils/analyze.ts",
     "build": "pnpm --filter ./@zimi/* run build",
     "build:watch": "pnpm --filter ./@zimi/* run build:watch",
@@ -32,13 +32,6 @@
     "lint:commit": "commitlint -e",
     "lint-staged": "lint-staged --quiet",
     "format": "prettier --write ."
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pnpm run lint-staged",
-      "pre-push": "pnpm run lint",
-      "commit-msg": "pnpm run lint:commit"
-    }
   },
   "lint-staged": {
     "*.{md,json}": [
@@ -64,30 +57,30 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@types/glob": "^8.1.0",
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1"
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5"
   },
   "TODO": [
     "test"
   ],
   "dependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
     "glob": "^10.3.10",
-    "tsx": "^4.7.0",
+    "tsx": "^4.7.1",
     "utils": "^0.3.1"
   }
 }
