--- a/@zimi/utils/package.json
+++ b/@zimi/utils/package.json
@@ -22,6 +22,14 @@
     "lodash-es": "^4.17.21"
   },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.12"
+    "@types/react": ">=16.8",
+    "react": ">=16.8",
+    "zustand": "^4.5.2",
+    "@types/lodash-es": "^4.17.12",
+    "@zimi/type-utils": "workspace:*"
+  },
+  "peerDependencies": {
+    "react": ">=16.8",
+    "zustand": "^4.5.2"
   }
 }
