--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,6 @@ env:
   # https://stackoverflow.com/a/75486166
   CI: true
   HUSKY: 0
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   test:
@@ -29,6 +28,8 @@ jobs:
         with:
           node-version: 16
           cache: 'pnpm'
+          # Please note that you need to set the registry-url to https://registry.npmjs.org/ in setup-node to properly configure your credentials.
+          registry-url: 'https://registry.npmjs.org'
       - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm build
 
