ci: npm registry required

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,5 +28,7 @@ jobs:
         with:
           node-version: 16
           cache: 'pnpm'
+          # Please note that you need to set the registry-url to https://registry.npmjs.org/ in setup-node to properly configure your credentials.
+          registry-url: 'https://registry.npmjs.org'
       - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm test
