--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,6 @@ jobs:
           node-version: 20
           cache: 'pnpm'
           # Please note that you need to set the registry-url to https://registry.npmjs.org/ in setup-node to properly configure your credentials.
-          registry-url: 'https://registry.npmjs.org'
+          registry-url: 'https://registry.npmjs.org/'
       - run: pnpm install --frozen-lockfile --prefer-offline
       - run: pnpm test
