--- a/@zimi/interact/package.json
+++ b/@zimi/interact/package.json
@@ -24,6 +24,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.0"
+    "@types/lodash": "^4.17.0",
+    "typescript": "^5.6.3"
   }
 }
