ci: try to fix github actions build error

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky",
     "analyze": "tsx utils/analyze.ts",
-    "build": "pnpm --filter ./@zimi/* run build",
-    "build:watch": "pnpm --filter ./@zimi/* run build:watch",
+    "build": "pnpm --filter \"./@zimi/*\" build",
+    "build:watch": "pnpm --filter \"./@zimi/*\" build:watch",
     "commit": "git-cz",
     "test": "echo todo test",
     "lint": "eslint --fix @zimi",
