feat: 新增 ssl-proxy 包

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,2 +1,8 @@
 packages:
   - '@zimi/**'
+ignoredBuiltDependencies:
+  - '@parcel/watcher'
+onlyBuiltDependencies:
+  - core-js
+  - core-js-pure
+  - esbuild
