--- a/@zimi/modal/package.json
+++ b/@zimi/modal/package.json
@@ -20,9 +20,9 @@
   },
   "dependencies": {
     "@zimi/hooks": "workspace:*",
-    "react": ">= 18"
+    "react": ">=16.8"
   },
   "devDependencies": {
-    "@types/react": "^19.1.8"
+    "@types/react": ">=16.8"
   }
 }
